mesh-with-db/quarkus-person-app/src/main/kubernetes/openshift.yml
apiVersion: v1
kind: Service
metadata:
  name: quarkus-person-app
  labels:
    app: quarkus-person-app
spec:
  type: ClusterIP
  selector:
    app: quarkus-person-app
  ports:
    - port: 8080
      name: http
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: quarkus-person-app-dr
spec:
  host: quarkus-person-app
  subsets:
    - name: v1
      labels:
        app.kubernetes.io/version: v1
    - name: v2
      labels:
        app.kubernetes.io/version: v2
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: microservices-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - quarkus-insurance-app.apps.cluster-e764.e764.sandbox168.opentlc.com
        - quarkus-person-app.apps.cluster-e764.e764.sandbox168.opentlc.com
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: quarkus-person-app-vs-via-gw
spec:
  hosts:
    - quarkus-person-app.apps.cluster-e764.e764.sandbox168.opentlc.com
  gateways:
    - microservices-gateway
  http:
    - match:
        - uri:
            prefix: "/person"
      rewrite:
        uri: " "
      route:
        - destination:
            host: quarkus-person-app
            subset: v1
          weight: 100
        - destination:
            host: quarkus-person-app
            subset: v2
          weight: 0
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: quarkus-person-app-vs
spec:
  hosts:
    - quarkus-person-app
  http:
    - route:
        - destination:
            host: quarkus-person-app
            subset: v1
          weight: 100
        - destination:
            host: quarkus-person-app
            subset: v2
          weight: 0
